# WeChatDev

./: .gitignore  GEMINI.md  README.md  quickstart.ps1  quickstart.sh  solution.md  verify-build.ps1
cpp-module/: CMakeLists.txt  README.md  build.ps1  build.sh
cpp-module/scripts/: embed_map.py
cpp-module/src/: demo.cpp
cpp-module/src/math/: vec2.h
cpp-module/src/physics/: particle.h  world.cpp  world.h
docs/: wasm-debug-server.md  wx-vs-web.md
minigame/: README.md  debug-server.py  game.js  game.json  project.config.json
minigame/js/: wasm-loader.js  wx-polyfills.js
minigame/wasm/: .gitkeep
web/: README.md  index.html  style.css
web/js/: game.js  wasm-loader.js
web/wasm/: .gitkeep
